Avoid horizontal scrolling

--- a/app/assets/modules/rankings.css.scss
+++ b/app/assets/modules/rankings.css.scss
@@ -6,7 +6,6 @@
     width: 100%;
     border-bottom: 1px solid #ccc;
     line-height: 3em;
-    padding: 0 .5em;
     list-style: none;
     text-align: center;
   }
